--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
         crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="img/jpg" href="img/Adobe Express - file (1).png">
     <title> MAX-THROTTLE | Unleash your Inner Rider | Push Limits, Chase Freedom</title>
 
 </head>
