--- a/bikes.html
+++ b/bikes.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="img/jpg" href="img/Adobe Express - file (1).png">
+    <link rel="icon" type="img/jpg" href="img/Adobe Express - file (1) (1).png">
     <title>Bikes | MAX-THROTTLE</title>
     <link rel="stylesheet" href="bikes.css">
 </head>
